--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .ipynb_checkpoints/Structural_plasticity-checkpoint.ipynb
 
 __pycache__/losses.cpython-310.pyc
+
+.idea/
+
+connexion_generation/__pycache__/
