--- a/environment.yml
+++ b/environment.yml
@@ -4,16 +4,17 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - python=3.11
+  - python>=3.11
   - numpy
-  - scipy>=1.12
+  - scipy
   - matplotlib
   - seaborn
   - pandas
   - scikit-learn
+  - librosa
   - pytorch  # 'torch' is named 'pytorch' in conda
   - torchaudio
-  - aeon
+  - aeon>=0.10
   - ffmpeg
   - tensorflow
   - optuna
